Working on premieres component

--- a/app/globals.css
+++ b/app/globals.css
@@ -20,6 +20,14 @@ body {
   background-repeat: no-repeat;
   background-size: 100% 100vh;
   margin: 0;
+
+  .scrollbar-none::-webkit-scrollbar {
+    display: none;
+  }
+
+  .scrollbar-none {
+    scrollbar-width: none;
+  }
 }
 
 html {
